--- a/src/core/css/social/panel.css
+++ b/src/core/css/social/panel.css
@@ -3,6 +3,12 @@
     border-width: 0;
     border-style: solid;
 }
+.fg-panel.fg-panel-comments-top:is(.fg-medium,.fg-panel-no-mobile) .fg-panel-comments-inner {
+    border-bottom-width: 1px;
+}
+.fg-panel.fg-panel-comments-bottom:is(.fg-medium,.fg-panel-no-mobile) .fg-panel-comments-inner {
+    border-top-width: 1px;
+}
 .fg-panel.fg-panel-comments-right:is(.fg-medium,.fg-panel-no-mobile) .fg-panel-comments-inner {
     border-left-width: 1px;
 }
